# media

./: .gitignore  LICENSE  README.md  create_audio.sh  package-lock.json  package.json  pyproject.toml  setup.sh  slides.md
audio/: Harward Sentences.md
content/001_whatisdecldix/: package-lock.json  package.json  slides.md
content/001_whatisdecldix/audio/: audio.txt  audio_concatenate.sh  stats.txt
content/001_whatisdecldix/video/: video.sh  whatisdecldix copy.py  whatisdecldix.py
content/001_whatisdecldix/video/010 Intro/: create_intro.py
src/: main.rs
