[tool.poetry]
name = "media"
version = "0.1.0"
description = "Collection of scripts and functions to create media content. Main target is to easily create youtube videos."
authors = ["MatthiasJonen <accounts.matthias@jonen.at>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymovie = "^4.0.6"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
